ボタンのcssを変更

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     type="text"
                     class="search-input js-search-input"
                     placeholder="本のタイトルや著者"
-                    value="この素晴らしい世界に祝福を！"
+                    value="Linux"
                     autofocus
                 />
                 <button type="button" class="search-button js-search-button">検索</button>
