ボタンアニメーションを追加

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <!-- JavaScript -->
         <script src="./js/index.js" defer></script>
+        <script src="./js/likeButton.js"></script>
     </head>
 
     <body>
@@ -23,13 +24,7 @@
             </div>
 
             <div class="search-box">
-                <input
-                    type="text"
-                    class="search-input js-search-input"
-                    placeholder="本のタイトルや著者"
-                    value="Linux"
-                    autofocus
-                />
+                <input type="text" class="search-input js-search-input" placeholder="本のタイトルや著者" value="Linux" autofocus />
                 <button type="button" class="search-button js-search-button">検索</button>
             </div>
         </header>
